--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,16 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/aeg-security
+    working_directory: ~/src
     docker:
-      - image: adexchangegrp/node6-build:latest
+      - image: $DOCKER_BUILD_IMAGE
     steps:
       - checkout
       - restore_cache:
           key: node_modules-{{ checksum "package.json" }}
       - run:
           name: npm install
-          command: echo //registry.npmjs.org/:_authToken=$NPM_TOKEN >> ~/.npmrc && npm install
+          command: echo //registry.npmjs.org/:_authToken=$NPM_TOKEN >> ~/.npmrc && npm install --no-save
       - save_cache:
           key: node_modules-{{ checksum "package.json" }}
           paths:
