--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@adexchange/aeg-security",
+  "name": "@push_innovation/aeg-security",
   "version": "0.0.1",
   "description": "Camp 2.0 security",
   "main": "./lib/index.js",
   "author": "Justin Durham",
   "repository": {
     "type": "git",
-    "url": "git://git@bitbucket.org:AdExchangeGrp/aeg-security.git"
+    "url": "https://github.com/pushinnovation/aeg-security.git"
   },
   "license": "UNLICENSED",
   "scripts": {
